--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,10 @@ input[type=date]::-webkit-clear-button{visibility:hidden;}
 			    .lpd-btn i.iconfont{font-size:15px;position:relative;top:1px;padding-right:5px;}
 			    .lpd-btn.play i{color:#309516;}
 			    .lpd-btn.stop i{color:#ef0c0c;}
+            .lp-check{float:left;width:100%;height:34px;margin-bottom:10px;color:#fff}
+			    .lpc-lights{float:left;margin-top: 5px}
+                .lpc-pop{float:left;margin-top: 5px}
+                .lpc-title{float:left;width: 100px;margin-right: 10px}
             .lp-statistic{float:left;width:100%;height:20px;font-size:11px;position:relative;color:#fff;margin-bottom:10px}
             .lp-des{float:left;width:100%;height:20px;font-size:13px;position:relative;color:#fff;margin-bottom:20px;}
 			.lp-search{float:left;width:100%;height:34px;margin-bottom:20px;position:relative;}
