--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ input[type=date]::-webkit-clear-button{visibility:hidden;}
 .map-container{position:relative;width:100%;height:100%;}
     .scene-main{float:left;width:100%;height:100%;}
     .map-main{float:right;width:0%;height:100%;}
-	.rtop-tool{position:absolute;right:120px;top:15px;width:300px;height:45px;border-radius:3px;background:rgba(75,122,185,.4);overflow: hidden}
-		.rtop-tool ul{float:left;width:300px;height:100%;padding:0 14px;}
+	.rtop-tool{position:absolute;right:120px;top:15px;width:350px;height:45px;border-radius:3px;background:rgba(75,122,185,.4);overflow: hidden}
+		.rtop-tool ul{float:left;width:350px;height:100%;padding:0 14px;}
 		.rtop-tool ul li{float:left;width:34px;height:45px;padding:7px 1px 6px 1px;}
 		.rtop-tool ul li a,.rtop-tool ul li.active a{display:block;width:32px;height:32px;padding:0 7px;
 			background: url(../images/icon_image.png) no-repeat;
@@ -41,7 +41,19 @@ input[type=date]::-webkit-clear-button{visibility:hidden;}
 		.rtop-tool ul li a.rtop-t08{background-position:-239px -7px;}
 		.rtop-tool ul li a.rtop-t09{background-position:-273px -7px;}
 		.rtop-tool ul li a:hover{transform-origin:center center;transform:rotate(360deg);transition:transform 0.2s;}
-    .tool-panel{position:absolute;right:160px;top:80px;width:260px;display:none;background:rgba(0,0,0,.5);padding:10px 0;color:#fff}
+    .tool-panel{position:absolute;right:160px;top:80px;width:220px;display:none;background:rgba(0,0,0,.5);padding:10px 0;color:#fff}
+    .fly-panel {position:absolute;right:160px;top:80px;width:260px;display:none;background:rgba(0,0,0,.5);padding:20px 20px;color:#fff}
+      #play {content: url(../images/play.png);height: 30px;padding: 5px;}
+       #pause {content: url(../images/pause.png);height: 30px;padding: 5px;}
+      #stop {content: url(../images/stop.png);height: 30px;padding: 5px;}
+     .button{line-height: 30px;text-align: center;font-weight: bold;color: #fff;text-shadow:1px 1px 1px #333;border-radius: 3px;margin:0 8px 8px 0;position: relative;overflow: hidden;padding: 0px 15px 0px 15px;}
+     .button:nth-child(6n){margin-right: 0;}
+     .button.black{
+	 border:1px solid #333;box-shadow: 0 1px 2px #8b8b8b inset,0 -1px 0 #3d3d3d inset,0 -2px 3px #8b8b8b inset;background: -webkit-linear-gradient(top,rgba(34, 34, 34, 0.49),rgba(51, 51, 51, 0.55));
+	 background: -moz-linear-gradient(top,#656565,#4a4a4a);background: linear-gradient(top,#656565,#4a4a4a);
+     }
+    .black:hover{background: -webkit-linear-gradient(top,#818181,#575757);background: -moz-linear-gradient(top,#818181,#575757);background: linear-gradient(top,#818181,#575757);}
+    .black:active{top:1px;box-shadow: 0 1px 3px #111 inset,0 3px 0 #fff;background: -webkit-linear-gradient(top,#424242,#575757);background: -moz-linear-gradient(top,#424242,#575757);background: linear-gradient(top,#424242,#575757);}
     .measure-panel{position:absolute;right:200px;top:65px;width:70px;display:none;background-color:#1b417a;;padding:5px 0;}
     .measure-panel .ico{float:left;width:28px;height:28px;background: url(../images/icon_image.png) no-repeat -137px -7px;}
     .measure-panel a{float:right;color:#fff;padding:5px;width:60%;font-size:14px}
